@@ -89,6 +89,7 @@ extern Tcl_ObjCmdProc
     NsTclCacheStatsObjCmd,
     NsTclCancelObjCmd,
     NsTclChanObjCmd,
+    NsTclCharsetsObjCmd,
     NsTclCondObjCmd,
     NsTclConnObjCmd,
     NsTclConnSendFpObjCmd,
@@ -223,7 +224,6 @@ extern Tcl_ObjCmdProc
 extern Tcl_CmdProc
     NsTclAdpDebugCmd,
     NsTclAdpStatsCmd,
-    NsTclCharsetsCmd,
     NsTclConfigCmd,
     NsTclConfigSectionCmd,
     NsTclConfigSectionsCmd,
@@ -273,7 +273,7 @@ static Cmd basicCmds[] = {
     {"ns_base64decode", NULL, NsTclHTUUDecodeObjCmd},
     {"ns_base64encode", NULL, NsTclHTUUEncodeObjCmd},
     {"ns_cancel", NULL, NsTclCancelObjCmd},
-    {"ns_charsets", NsTclCharsetsCmd, NULL},
+    {"ns_charsets", NULL, NsTclCharsetsObjCmd},
     {"ns_config", NsTclConfigCmd, NULL},
     {"ns_configsection", NsTclConfigSectionCmd, NULL},
     {"ns_configsections", NsTclConfigSectionsCmd, NULL},
